translatable/tests/static/invalid_syntax.stderr
error: expected `,`
 --> tests/static/invalid_syntax.rs:5:13
  |
5 |     let _ = translation!("es");
  |             ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error: An IO Error occurred: No such file or directory (os error 2)
 --> tests/static/invalid_syntax.rs:8:13
  |
8 |     let _ = translation!(42, static common::greeting);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error: An IO Error occurred: No such file or directory (os error 2)
  --> tests/static/invalid_syntax.rs:11:13
   |
11 |     let _ = translation!("es", static invalid::path);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)
